src/test/resources/invalid/semanticErr/extra/array/arraysOfDiffTypesEq.wacc
begin

int[] arr = [1,2,3];
char[] crr = ['c', 'r', 'r'];
char[] brr = [1, 2, 'a', crr, arr];
println arr == crr

end